--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,35 @@
-
-*,
-*:before,
-*:after {
-	box-sizing: border-box;
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
-.container {
-	min-width: 320px;
-	max-width: 1440px;
-	margin: 0 auto;
+
+:global(.container) {
+  min-width: 320px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+:global(.rec.rec-pagination) {
+  position: absolute;
+  bottom: 10px;
+  right: 18px;
+}
+
+:global(.rec.rec-carousel-wrapper) {
+  position: relative;
+}
+:global(.rec.rec-dot.rec.rec-dot_active){
+  background-color: #FFFFFF;
+  box-shadow: 0 5px 5px rgba(31, 32, 65, 0.3);
+}
+:global(.rec.rec-dot.rec.rec-dot){
+  box-shadow: 0 0 1px 2px rgba(255, 255, 255, 0.5);
 }
 
 
