--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -2,22 +2,26 @@
 
 .header {
   height: 70px;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 }
 
 .header__inner {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  position: relative;
 }
 
 .header__img {
-  margin-right: 185px;
-  padding: 10px 0;
+  margin: 13px 0;
 }
-
+.header__logo{
+  position: absolute;
+  left: 89px;
+}
 .nav {
-
   display: flex;
-  margin: 23px 20px;
+  padding: 23px 0;
+  margin-right: 174px;
 }
 
 .nav__link {
