--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ body {
   min-width: 320px;
   max-width: 1440px;
   margin: 0 auto;
+  font-family: Montserrat,sans-serif;
 }
 
 :global(.rec.rec-pagination) {
