--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -119,7 +119,7 @@
     font-size: 14px;
     line-height: 24px;
 
-    color: rgba(31, 32, 65, 0.25);
+    color:  rgba(31, 32, 65, 0.25);;
 
     outline: none;
 
@@ -138,10 +138,11 @@
 
     color: rgba(31, 32, 65, 0.5);
   }
+
+}
 .input{
   width: 260px;
   height: 44px;
-}
 }
 
 
