--- a/src/components/intelligence/styles.module.scss
+++ b/src/components/intelligence/styles.module.scss
@@ -1,58 +1,76 @@
-.unit_1{
-display: flex;
+.unit_1 {
+  display: flex;
   justify-content: space-around;
 }
-.unit_2{
-flex-direction: column;
+
+.unit_2 {
+  flex-direction: column;
   display: flex;
 }
-.inner{
+
+.inner {
   display: flex;
   flex-direction: column;
 }
-.photo{
-  margin: 15px 15px;
-}
-.elem{
-  display: flex;
-  border-bottom: 1px solid rgba(31, 32, 65, 0.1);;
-}
-.text_reviews_1{
+
+.text_reviews_1 {
   font-size: 14px;
   line-height: 24px;
 
   color: rgba(31, 32, 65, 0.75);
-  width: 44%;
+  width: 653px;
 }
-.text_reviews_2{
+
+.text_reviews_2 {
   font-size: 14px;
   line-height: 24px;
 
   color: rgba(31, 32, 65, 0.75);
   width: 65%;
 }
-.text_2{
+
+.element {
+  display: flex;
+  border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+}
+
+.element:nth-last-child(1) {
+  border-bottom: none;
+}
+
+.photo {
+  margin: 15px 15px;
+}
+
+.element_text {
+  display: flex;
+  flex-direction: column;
+}
+
+.text_2 {
   font-weight: bold;
   font-size: 14px;
   line-height: 24px;
 
   color: rgba(31, 32, 65, 0.75);
 }
-.text_1{
-  margin-bottom: 15px;
+
+.text_1 {
   font-size: 14px;
   line-height: 24px;
 
   color: rgba(31, 32, 65, 0.75);
 }
-.elem_2{
-margin: 0 15px;
+
+.elem_2 {
+  margin: 0 15px;
 }
 
-.inner_2{
+.inner_2 {
   display: flex;
 }
-.inner_3{
+
+.inner_3 {
   width: 380px;
   height: 511px;
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -61,56 +79,134 @@ margin: 0 15px;
   border-radius: 4px;
 }
 
-.wrap_1{
+.wrap_1 {
   display: flex;
   flex-direction: column;
 }
-.wrap_2{
+
+.wrap_2 {
   display: flex;
   flex-direction: column;
 }
-.avatar_1{
+
+.avatar_1 {
   margin-top: -9px;
   margin-bottom: -15px;
 }
-.reviews_1{
+
+.reviews_1 {
   cursor: pointer;
   width: 40px;
   height: 20px;
   margin-left: 23px;
   margin-top: 2px;
 }
-.global{
-  display: flex;
-  margin:20px;
+
+.reviews_2 {
+  color: rgba(31, 32, 65, 0.75);
+  font-size: 14px;
+  line-height: 24px;
+  width: 340px;
 }
-.subtitle{
+
+.global {
+  display: flex;
+  margin: 20px;
+}
+
+.unit_3 {
   display: flex;
   flex-direction: column;
 }
-.unit_3{
+
+.regulations {
   display: flex;
-}
-.regulations{
+  flex-direction: column;
   font-size: 14px;
   line-height: 24px;
-  width: 19%;
   color: rgba(31, 32, 65, 0.75);
 }
-.regulations_1{
+
+.regulations_1 {
   font-weight: bold;
   font-size: 19px;
-  line-height: 23px;
 
   color: #1F2041;
 }
-.regulations_2{
-  width: 65%;
-}
-.visitors{
+
+.visitors {
   font-weight: bold;
   font-size: 19px;
   line-height: 23px;
-
+  margin: 10px 0;
   color: #1F2041;
 }
+
+.ulli_1 {
+
+  font-size: 14px;
+  line-height: 24px;
+
+  color: rgba(31, 32, 65, 0.75);
+}
+
+.list {
+  list-style: none;
+
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.75);
+  margin: 0;
+}
+
+.list_item {
+  position: relative;
+}
+
+.list_item:after {
+  position: absolute;
+  content: '';
+  left: -19px;
+  top: 7px;
+  height: 10px;
+  width: 10px;
+  border-radius: 6px;
+}
+
+.color_1:after {
+  background: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
+}
+
+.color_2:after {
+  background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+}
+
+.color_3:after {
+  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+}
+
+.color_4:after {
+  background: linear-gradient(180deg, #919191 0%, #3D4975 100%);
+}
+
+.color_5 {
+  width: 240px;
+  margin: 10px 0;
+}
+
+.color_5:after {
+  background: rgba(31, 32, 65, 0.25);
+}
+.intelligence_photo{
+  display: flex;
+}
+
+.int{
+  display: flex;
+  flex-direction: column;
+}
+
+.photo_6 {
+  display: flex;
+}
+
