--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -7,6 +8,9 @@ html,
 body {
   margin: 0;
   padding: 0;
+
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :global(.container) {
@@ -32,5 +36,4 @@ body {
 :global(.rec.rec-dot.rec.rec-dot){
   box-shadow: 0 0 1px 2px rgba(255, 255, 255, 0.5);
 }
-
 
