--- a/src/components/dropdown/styles.module.scss
+++ b/src/components/dropdown/styles.module.scss
@@ -1,86 +1,32 @@
-@mixin styling() {
-  background-color: white;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  box-sizing: border-box;
-  border-radius: 4px;
-}
 
 .dd_wrapper {
   display: flex;
   min-height: 44px;
   flex-wrap: wrap;
+}
 
-  .dd_header {
-    @include styling();
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    width: 100%;
-    border: none;
-    outline: none;
 
- /*   &__title--bold {
-      font-weight: bold;
-    }*/
+.dd_header {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 100%;
+  outline: none;
+  border-radius: 4px;
+
+  &__open {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 }
-.option_2{
+
+.option_2 {
   font-weight: bold;
   font-size: 12px;
-  line-height: 15px;
-
   text-transform: uppercase;
 
   color: #1F2041;
 }
-/*
-
-  .dd_list {
-    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    margin-top: 20px;
-
-    li {
-      list-style-type: none;
-
-      &:first-of-type {
-        > button {
-          border-top: 1px solid #ccc;
-          border-top-left-radius: 4px;
-          border-top-right-radius: 4px;
-        }
-      }
-
-      &:last-of-type > button {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-      }
-
-      button {
-        display: flex;
-        justify-content: space-between;
-        background-color: white;
-        font-size: 16px;
-        padding: 15px 20px 15px 20px;
-        border: 0;
-        border-bottom: 1px solid #ccc;
-        width: 100%;
-        text-align: left;
-        border-left: 1px solid #ccc;
-        border-right: 1px solid #ccc;
-
-        &:hover, &:focus {
-          cursor: pointer;
-          font-weight: bold;
-          background-color: #ccc;
-        }
-      }
-    }
-  }
-}
-*/
 
 .arrow_up {
   transform-origin: center;
