--- a/src/components/number/styles.module.scss
+++ b/src/components/number/styles.module.scss
@@ -133,3 +133,39 @@
 
   color: #1F2041;
 }
+
+.inner {
+  width: 100%;
+  display: flex;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border: 1px solid rgba(31, 32, 65, 0.5);
+  border-top: none;
+}
+
+.inner_2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.text_button {
+  font-weight: bold;
+  font-size: 16px;
+
+  color: #1F2041;
+
+  margin: 9px 14px;
+}
+
+.wrap {
+  margin: 4px 0;
+}
+
+.trigger {
+  padding: 0 10px;
+  border: 1px solid rgba(31, 32, 65, 0.5);
+}
+.trigger_2 {
+  padding: 0 10px;
+  margin: 10px 0;
+}
