--- a/src/components/pagination/styles.module.scss
+++ b/src/components/pagination/styles.module.scss
@@ -5,6 +5,7 @@
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
 }
+
 .next_link {
   position: relative;
   display: block;
@@ -17,19 +18,9 @@
   cursor: pointer;
 }
 
-.container_pagination {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  font-size: 12px;
-  line-height: 15px;
-
-  color: rgba(31, 32, 65, 0.5);
-}
-
 .pagination {
-  justify-content: center;
   display: flex;
+  align-items: center;
 
   :global(.previous) {
     display: none;
@@ -42,10 +33,11 @@
 
 .pagination > li > a,
 .pagination > li > span {
-  padding: 10px 18px;
+  padding: 10px 10px;
   text-decoration: none;
   outline: none;
-  font-size: 20px;
+  font-size: 12px;
+  font-weight: bold;
   color: rgba(31, 32, 65, 0.5);
   background-color: #FFFFFF;
   cursor: pointer;
@@ -55,49 +47,25 @@
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
- z-index: 2;
+  z-index: 2;
   color: #FFFFFF;
-  width: 40px;
-  height: 20px;
+  padding: 13px 18px;
   background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
   border-radius: 22px;
   cursor: pointer;
 }
+
 .pagination > .active > a,
 .pagination > .active > span,
 .pagination > .active > a:hover,
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  z-index: 3;
-  color: #fff;
-  background-color: #2c689c;
-  border-color: #2c689c;
-  cursor: default;
+  z-index: 2;
+  color: #FFFFFF;
+  padding: 13px 18px;
+  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+  border-radius: 22px;
+  cursor: pointer;
 }
 
-.pagination > .disabled > span,
-.pagination > .disabled > span:hover,
-.pagination > .disabled > span:focus,
-.pagination > .disabled > a,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > a:focus {
-  color: #777777;
-  background-color: #fff;
-  border-color: #ddd;
-  cursor: not-allowed;
-}
-
-.pagination-lg > li > a,
-.pagination-lg > li > span {
-  padding: 10px 16px;
-  font-size: 20px;
-  line-height: 1.3333333;
-}
-
-.pagination-sm > li > a,
-.pagination-sm > li > span {
-  padding: 5px 10px;
-  font-size: 14px;
-  line-height: 1.5;
-}
