--- a/src/components/rooms/styles.module.scss
+++ b/src/components/rooms/styles.module.scss
@@ -57,6 +57,11 @@
 
   color: rgba(31, 32, 65, 0.5);
 }
+.price_2 {
+  font-size: 12px;
+color: rgba(31, 32, 65, 0.5);
+}
+
 
 .info_2 {
   width: 250px;
@@ -94,15 +99,16 @@
   color: #1F2041;
 }
 .paginate_blog{
-  margin: 50px 190px 50px 0;
+  margin: 0 190px 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .paginate_text{
-  margin-top: -22px;
+  margin-top: -10px;
   font-size: 14px;
   line-height: 24px;
+  margin-left: 47px;
 
   color: rgba(31, 32, 65, 0.75);
 }
